# reco-trading

./: .env.backup_20260402_125717  .env.backup_20260402_130221  .env.backup_20260402_131058  .env.backup_20260402_131700  .env.backup_20260403_171002  .env.dev  .env.example  .env.prod  .env.template  .gitignore  AUDITORIA_TECNICA_AVANZADA.md  AUDITORIA_TECNICA_INICIAL.md  AUDIT_REPORT.md  CODEX_PROMPT_RECO_TRADING.md  CODEX_PROMPT_RECO_TRADING_V2.md  Dockerfile  Dockerfile.backtest  README-EN.md  README-TELEGRAM.md  README.md  bot.service  build_android_auto.sh  build_docker.sh  docker-build.sh  docker-compose.yml  instalacion  install-linux.sh  install-windows-powershell.ps1  install-windows.bat  install.bat  install.ps1  install.sh  loguru.py  main.py  pyproject.toml  reco.bat  requirements-api.txt  requirements.txt  run-windows.bat  run.sh  (+2 more)
app_android/: build_android_auto.sh  build_apk.sh  buildozer.spec  config.py  install_android_env.sh  main.py  requirements.txt
bot/: __init__.py  config.py  main.py
config/: database.env  risk.yaml  strategy.yaml  telegram.yaml  trading.yaml
database/: schema.sql
deploy/: README.md
docker/: Dockerfile
docs/: analisis_comparativo.md  institutional_audit_report.md  technical_audit_reco_trading_2026-03-08.md  technical_audit_reco_trading_2026-03-08_r2.md  technical_audit_reco_trading_2026-03-08_r3.md  technical_audit_reco_trading_2026-03-08_r4.md  technical_audit_reco_trading_2026-03-08_r5.md  technical_audit_reco_trading_2026-03-08_r6.md  technical_audit_reco_trading_2026-03-08_r7.md
reco_trading/: __init__.py  __main__.py  constants.py  main.py
scripts/: ensure_postgres.sh  init_db.sql  live_trading.py  reset_database.sh  run_backtest.py  seed_history.py  train_models.py
tests/: test_adaptive_market_maker.py  test_adaptive_sizer.py  test_advanced_quant_modules.py  test_adx_filter.py  test_alert_manager_slos.py  test_alpha_lab.py  test_api_security.py  test_architecture_upgrade.py  test_backtesting_engine.py  test_backtesting_execution_realism.py  test_backtesting_runner.py  test_binance_client.py  test_binance_client_order_rules.py  (+92 more)
(+459 files in other folders)
