[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reco-trading"
version = "0.2.0"
description = "Minimal retail Binance trading bot (low-frequency, safety-first)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "asyncpg",
  "ccxt",
  "numpy",
  "pandas",
  "pydantic",
  "pydantic-settings",
  "PySide6",
  "pyqtgraph",
  "python-dotenv",
  "rich",
  "sqlalchemy",
  "ta",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
