[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reco-trading"
version = "0.2.0"
description = "Minimal retail Binance trading bot (low-frequency, safety-first)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "asyncpg",
  "ccxt",
  "numpy",
  "pandas",
  "pydantic",
  "pydantic-settings",
  "PySide6",
  "pyqtgraph",
  "python-dotenv",
  "rich",
  "sqlalchemy",
  "ta",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
ml = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "pytorch-lightning>=2.0.0",
  "stable-baselines3>=2.2.1",
  "optuna>=3.3.0",
  "gymnasium>=0.28.0",
  "ray>=2.6.0",
  "spacy>=3.6.0",
  "statsmodels>=0.14.0",
  "yfinance>=0.2.0",
  "scikit-learn>=1.3.0",
  "lightgbm>=4.0.0",
  "xgboost>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
